 syntax = "proto3";

package manager;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "manager_department.proto";
import "manager_role.proto";

message Job {
  uint32 id = 1;
  string keyword = 2;
  string name = 3;
  string description = 4;
  optional uint32 weight = 5;
  optional uint32 created_at = 6;
  optional uint32 updated_at = 7;
}

message GetJobRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}

 message GetJobReply{
  Job job = 1;
}

 message GetUserJobRequest{
   uint32 id = 1[(validate.rules).uint32 = {gt:0}];
 }

 message GetUserJobReply{
   repeated Job jobs = 1;
 }

message PageJobRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string keyword = 3;
}

message PageJobReply{
  uint32 total = 1;
  repeated Job list = 2;
}

message AddJobRequest{
  string keyword = 1[(validate.rules).string = {min_len:1}];
  string name = 2[(validate.rules).string = {min_len:1}];
  string description = 3[(validate.rules).string = {min_len:1}];
  optional uint32 weight = 4;
}

message UpdateJobRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
  string name = 2[(validate.rules).string = {min_len:1}];
  string description = 3[(validate.rules).string = {min_len:1}];
  optional uint32 weight = 4[(validate.rules).uint32 = {gt:0}];
}

message DeleteJobRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}
